	  the window title workaround configurable as a hidden setting
	  VteWorkaroundTitleBug, the actual bug do not seem to be in VTE,
	  but a problem with applications that determine the window title
	  using the environment variable WINDOWID.
	* terminal/main.c(main): Added GLib version check (2.6 only). Print
	  Gtk+ versions (built/runtime) with --version.

2004-11-02	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c: Work around a problem in VTE, where
	  the initial title is prepended again and again. This should fix
	  bug #10.
	* terminal/terminal-image-loader.c, terminal/terminal-widget.c,
	  terminal/terminal-image-loader.h, terminal/terminal-preferences.c,
	  terminal/terminal-preferences-dialog.c,
	  terminal/terminal-preferences.h: Added style (centered, scaled,
	  stretched, tiled) option for background images. This should fix
	  bug #9.
	* terminal/main.c: Don't make CRITICAL fatal with --enable-debug,
	  since this crashes Terminal due to bugs in GtkFileChooser.
	* po/: Run make update-po and updated de.po.
	* TerminalHelp.in: Perform browser search instead of forcing
	  mozilla.

2004-10-12	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Version 0.1.9, depend on latest exo 0.1.2.
	* m4/debug.m4: Added linker optimizations if --enable-final is
	  given (recent GNU binutils required).
	* doc/C/Terminal.xml: Update version and date.

2004-10-10	Benedikt Meurer <benny@xfce.org>

	* Terminal.ui, terminal/terminal-window.c: Load the UI description
	  from the Terminal.ui file at runtime to allow users to customize
	  the menus.

2004-10-03	Benedikt Meurer <benny@xfce.org>

	* HACKING: Added note to update gnomefiles.org entry when releasing.

2004-10-02	Benedikt Meurer <benny@xfce.org>

	* doc/C/Terminal.xml: Added FAQ entry how to fix Home/End keys in
	  Terminal, thanks to sofar@lunar-linux.org.
	* TODO: Added note on how to handle backwards compatibility in the
	  D-BUS service interface.

2004-09-31	Benedikt Meurer <benny@xfce.org>
