@@ -11,6 +11,9 @@
 	  using the environment variable WINDOWID.
 	* terminal/main.c(main): Added GLib version check (2.6 only). Print
 	  Gtk+ versions (built/runtime) with --version.
+	* terminal/terminal-preferences-dialog.c: Added preview widget to
+	  the background image file chooser window. Added file filters
+	  based on the installed GdkPixbuf formats.
 
 2004-11-02	Benedikt Meurer <benny@xfce.org>
 
